--- a/exercise1/App.config
+++ b/exercise1/App.config
@@ -19,7 +19,7 @@
     </providers>
   </entityFramework>
 <connectionStrings>
-  <add name="connection" connectionString="Server=XIAONINGGUO-E45\XNGUO;Database=exercise1;User Id=sa;Password=1qaz2wsxE;" providerName="System.Data.SqlClient" />
+  <add name="connection" connectionString="Server=10.0.0.97;Database=exercise1;User Id=sa;Password=1qaz2wsxE;" providerName="System.Data.SqlClient" />
 </connectionStrings>
   
   <runtime>
